# rot13

./: Makefile  README.md  ROT13.3.md  ROT13.6.md  setup.cfg
man/: rot13.3  rot13.6
src/rot13/: Makefile  main.py
tests/: alpha  ascii
