[metadata]
name = pnu_rot13
description = encrypt or decrypt caesar ciphers
long_description = file: README.md
long_description_content_type = text/markdown
version = 1.0.4
license = BSD 3-Clause License
license_files = License
author = Hubert Tournier
author_email = nobody@nowhere.invalid
url = https://github.com/HubTou/rot13/
project_urls =
    Bug Tracker = https://github.com/Hubert Tournier/rot13/issues
keywords = pnu-project
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Communications :: Email :: Filters
    Topic :: Communications :: Usenet News
    Topic :: Games/Entertainment :: Fortune Cookies
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System
    Topic :: Text Processing :: Filters
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rot13 = rot13:main

[options.data_files]
man/man6 = 
    man/rot13.6.gz

